Fixed spacing

--- a/src/resources/elements/activity/activity-grid.css
+++ b/src/resources/elements/activity/activity-grid.css
@@ -19,7 +19,6 @@
 }
 .clickable {
   cursor: pointer;
-  margin: 0.25rem;
 }
 .grid-button {
   padding: 0.5rem;
