--- a/src/resources/elements/activity/activity.css
+++ b/src/resources/elements/activity/activity.css
@@ -6,7 +6,8 @@
   user-select: none;
   border: 1px solid transparent;
   align-self: start;
-  margin: 0.5rem;
+  margin: 2px;
+  padding: 4px 6px;
 }
 .emoji {
   display: inline-block;
